test/compile_errors/stage1/obj/double_optional_on_main_return_value.zig
pub fn main() ??void {
}

// double ?? on main return value
//
// error: expected return type of main to be 'void', '!void', 'noreturn', 'u8', or '!u8'
